ajuste de tela para smartphone

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div>
         <p>calcule os anos em meses</p>
-        <input type="number" id="numero" placeholder="informe a idade">
-        <button id="btn"><p>calcular</p></button>
-        <span id="resultado"></span>
+    </div>
+    <div>
+        <input type="number" id="numero" required placeholder="informe a idade">
+        <button id="btn"><p>calcular</p></button> <br>
+        <p>Resultado</p><span id="resultado">0</span>meses
     </div>
         <script src="script.js"></script>
 </body>
