ajustes de tela

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>calculo de meses</title>
 </head>
 <body>
-    <div>
-        <p>calcule os anos em meses</p>
+    <div class="principal">
+    <div class="titulo">
+        <p>Calcule os anos em meses</p>
     </div>
     <div>
-        <input type="number" id="numero" required placeholder="informe a idade">
+        <input type="number" id="valor" required placeholder="informe a idade">
         <button id="btn"><p>calcular</p></button> <br>
-        <p>Resultado</p><span id="resultado">0</span>meses
+        <p>Resultado</p><span id="resultado">0</span><p>meses</p>
     </div>
         <script src="script.js"></script>
+    </div>
 </body>
 </html>
