--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <button id="btn"><p>calcular</p></button> <br>
         <p>Resultado</p><span id="resultado">0</span><p>meses</p>
     </div>
-        <script src="script.js"></script>
     </div>
+    <footer>
+        <img src="" alt="">
+        <p class="copyright">&copy; Copyright - Williams Araujo</p>
+    </footer>
+        <script src="script.js"></script>
 </body>
 </html>
