adicionando redes sociais

--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <title>calculo de meses</title>
 </head>
 <body>
-    <div class="principal">
-    <div class="titulo">
-        <p>Calcule os anos em meses</p>
-    </div>
-    <div>
-        <input type="number" id="valor" required placeholder="informe a idade">
-        <button id="btn"><p>calcular</p></button> <br>
-        <p>Resultado</p><span id="resultado">0</span><p>meses</p>
-    </div>
+    <header class="principal">
+        <h1>Calcule os anos em meses</h1>
+    </header>
+    <div class="secundaria">
+   
+        <input type="number" id="valor" placeholder="informe a idade">
+        <button id="btn"><p>calcular</p></button>
+        <p class="texto-resultado">Resultado</p>
+        <span id="resultado">0</span>
+        <p>meses</p>
+    
     </div>
     <footer>
-        <img src="" alt="">
+        <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="/imagens/instagram.png" alt="icone do instagram"></a>
+        <a href="https://github.com/WilCb"><img class="github" src="/imagens/github.png" alt="icone do github"></a>
+        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="/imagens/linkendin.png"></a>
         <p class="copyright">&copy; Copyright - Williams Araujo</p>
     </footer>
         <script src="script.js"></script>
