corrindo visualização de imagem, mudando de /imagem para imagem/...

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     
     </div>
     <footer>
-        <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="../imagens/instagram.png" alt="Instagram"></a>
-        <a href="https://github.com/WilCb"><img class="github" src="../imagens/github.png" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="../imagens/linkendin.png" alt="Linkidin"></a>
+        <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a>
+        <a href="https://github.com/WilCb"><img class="github" src="imagens/github.png" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkendin.png" alt="Linkidin"></a>
         <p class="copyright">&copy; Copyright - Williams Araujo</p>
     </footer>
         <script src="script.js"></script>
