Alterando anos para idade

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="principal">
-        <h1>Calcule os anos em meses</h1>
+        <h1>Calcular idade em meses</h1>
     </header>
     <div class="secundaria">
    
