--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer>
         <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a>
         <a href="https://github.com/WilCb"><img class="github" src="imagens/github.png" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkedin.png" alt="Linkidin"></a>
+        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkedin.png" alt="Linkedin"></a>
         <p class="copyright">&copy; Copyright - Williams Araujo</p>
     </footer>
         <script src="script.js"></script>
