--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculo de meses</title>
 </head>
 <body>
-    <header class="principal">
-        <h1>Calcular idade em meses</h1>
+
+    <header class="cabecalho-principal">
+        <nav class="container">
+            <h1 class="logo"><a href="home.html"><img src="/imagens/WilCléb.png" height="200px"></a></h1>
+            <ul class="cabecalho-menu">
+                <a href="home.html"><button class="btn-link"><li class="link">Início</li></a></button>
+                <a href="index.html"><button class="btn-link"><li class="link">Calcular idade em meses</li></a></button>
+            </ul>
+        </nav>
     </header>
+    <p class="texto-explicativo"> Calcular idade em meses<br> informe a idade a partir de 1 ano<br>
+    exemplo: 1 ano = 12 meses </p>
     <div class="secundaria">
    
         <input type="number" id="valor" placeholder="informe a idade">
