adição de pagina inicial do opções de calculadora e inclusão de flexbox

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span id="resultado">0</span>
         <p class="meses">meses</p>
     </div>
-    <footer>
+    <footer class="rodape">
         <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a>
         <a href="https://github.com/WilCb"><img class="github" src="imagens/github.png" alt="GitHub"></a>
         <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkedin.png" alt="Linkedin"></a>
