--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculo de meses</title>
@@ -11,7 +11,7 @@
 
     <header class="cabecalho-principal">
         <nav class="container">
-            <h1 class="logo"><a href="home.html"><img src="/imagens/WilCléb.png" height="200px"></a></h1>
+            <h1 class="logo"><a href="home.html"><img src="imagens/WilCléb.png" height="200px"></a></h1>
             <ul class="cabecalho-menu">
                 <a href="home.html"><button class="btn-link"><li class="link">Início</li></a></button>
                 <a href="index.html"><button class="btn-link"><li class="link">Calcular idade em meses</li></a></button>
