link do flebox.css no index.html

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
     <header class="cabecalho-principal">
         <nav class="container">
-            <h1 class="logo"><a href="home.html"><img src="/imagens/WilCléb.png" height="200px"></a></h1>
+            <h1 class="logo"><a href="home.html"><img src="imagens/WilCléb.png" height="200px"></a></h1>
             <p class="texto-explicativo">Escolha a calculadora abaixo</p>
             <ul class="cabecalho-menu">
                 
@@ -25,7 +25,7 @@
     </header>
 
     <footer class="rodape">
-        <div class="container-rodape"></div>
+        <div class="container-rodape">
             <ul class="rodape-menu">
 
                 <li class="link-rodape"><a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a></li>
