--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/flexbox.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculo de meses</title>
@@ -31,10 +32,16 @@
         <p class="meses">meses</p>
     </div>
     <footer class="rodape">
-        <a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a>
-        <a href="https://github.com/WilCb"><img class="github" src="imagens/github.png" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkedin.png" alt="Linkedin"></a>
-        <p class="copyright">&copy; Copyright - Williams Araujo</p>
+        <div class="container-rodape">
+            <ul class="rodape-menu">
+
+                <li class="link-rodape"><a href="https://www.instagram.com/wil_araaujo/"><img class="instagram" src="imagens/instagram.png" alt="Instagram"></a></li>
+                <li class="link-rodape"><a href="https://github.com/WilCb"><img class="github" src="imagens/github.png" alt="GitHub"></a></li>
+                <li class="link-rodape"><a href="https://www.linkedin.com/in/williams-araujo-front-end/"><img class="linkedin" src="imagens/linkedin.png" alt="Linkedin"></a></li>
+          
+            </ul>
+            <p class="copyright">&copy; Copyright - Williams Araujo</p>
+        </div>
     </footer>
         <script src="script.js"></script>
 </body>
